feat: create endpoint for nl by id
